--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "vue-sweetalert2": "^4.2.0",
         "vuelidate": "^0.7.6",
         "vuetify": "^2.4.3",
+        "vuetify-datetime-picker": "^2.1.1",
         "vuetify-mask": "^1.1.0"
     }
 }
