--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "moment": "^2.29.1",
+        "vue-excel-export": "^0.1.3",
         "vue-router": "^3.5.1",
         "vue-sweetalert2": "^4.2.0",
         "vuelidate": "^0.7.6",
