--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.4",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.5"
+        "laravel/ui": "^2.5",
+        "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
