--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
+        "beyondcode/laravel-websockets": "^1.11",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
@@ -17,6 +18,8 @@
         "laravel/passport": "^9.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.5",
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "~4.0",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
