--- a/package.json
+++ b/package.json
@@ -29,9 +29,18 @@
         "vuetify-loader": "^1.7.2"
     },
     "dependencies": {
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "ioredis": "^4.24.5",
+        "laravel-echo": "^1.10.0",
         "moment": "^2.29.1",
+        "pusher-js": "^7.0.3",
+        "redis": "^3.0.2",
+        "redis-server": "^1.2.2",
+        "socket.io": "^4.0.0",
         "vue-excel-export": "^0.1.3",
         "vue-router": "^3.5.1",
+        "vue-socket.io": "^3.0.10",
         "vue-sweetalert2": "^4.2.0",
         "vuelidate": "^0.7.6",
         "vuetify": "^2.4.3",
