--- a/package.json
+++ b/package.json
@@ -1,50 +1,68 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@mdi/font": "^5.9.55",
-        "axios": "^0.19.2",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^7.0",
-        "deepmerge": "^4.2.2",
-        "font-awesome": "^4.7.0",
-        "jquery": "^3.2",
-        "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
-        "material-design-icons-iconfont": "^6.1.0",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.32.6",
-        "sass-loader": "^8.0.2",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10",
-        "vuetify-loader": "^1.7.2"
-    },
-    "dependencies": {
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "ioredis": "^4.24.5",
-        "laravel-echo": "^1.10.0",
-        "moment": "^2.29.1",
-        "pusher-js": "^7.0.3",
-        "redis": "^3.0.2",
-        "redis-server": "^1.2.2",
-        "socket.io": "^4.0.0",
-        "vue-excel-export": "^0.1.3",
-        "vue-router": "^3.5.1",
-        "vue-socket.io": "^3.0.10",
-        "vue-sweetalert2": "^4.2.0",
-        "vuelidate": "^0.7.6",
-        "vuetify": "^2.4.3",
-        "vuetify-datetime-picker": "^2.1.1",
-        "vuetify-mask": "^1.1.0"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "@mdi/font": "^5.9.55",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.0.0",
+    "cross-env": "^7.0",
+    "deepmerge": "^4.2.2",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.2",
+    "laravel-mix": "^5.0.1",
+    "lodash": "^4.17.13",
+    "material-design-icons-iconfont": "^6.1.0",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.32.6",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.7.2"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "ioredis": "^4.24.5",
+    "laravel-echo": "^1.10.0",
+    "moment": "^2.29.1",
+    "pusher-js": "^7.0.3",
+    "redis": "^3.0.2",
+    "redis-server": "^1.2.2",
+    "socket.io": "^4.0.0",
+    "vue-excel-export": "^0.1.3",
+    "vue-router": "^3.5.1",
+    "vue-socket.io": "^3.0.10",
+    "vue-sweetalert2": "^4.2.0",
+    "vuelidate": "^0.7.6",
+    "vuetify": "^2.4.3",
+    "vuetify-datetime-picker": "^2.1.1",
+    "vuetify-mask": "^1.1.0"
+  },
+  "name": "mis",
+  "description": "<p align=\"center\"><img src=\"https://res.cloudinary.com/dtfbvvkyp/image/upload/v1566331377/laravel-logolockup-cmyk-red.svg\" width=\"400\"></p>",
+  "version": "1.0.0",
+  "main": "webpack.mix.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xavierder13/mis.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/xavierder13/mis/issues"
+  },
+  "homepage": "https://github.com/xavierder13/mis#readme"
 }
