--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/passport": "^9.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~4.0",
         "spatie/laravel-permission": "^4.0"
