--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "vuetify-loader": "^1.7.2"
   },
   "dependencies": {
+    "ckeditor-ruler": "^1.3.3",
+    "ckeditor4-vue": "^1.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
