--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "maatwebsite/excel": "^3.1",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "~4.0",
+        "spatie/laravel-activitylog": "^3.16",
         "spatie/laravel-permission": "^4.0"
     },
     "require-dev": {
