--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.3",
     "vuetify-datetime-picker": "^2.1.1",
-    "vuetify-mask": "^1.1.0"
+    "vuetify-mask": "^1.1.0",
+    "vuex": "^3.6.2"
   },
   "name": "mis",
   "description": "<p align=\"center\"><img src=\"https://res.cloudinary.com/dtfbvvkyp/image/upload/v1566331377/laravel-logolockup-cmyk-red.svg\" width=\"400\"></p>",
